--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mikro-orm/core": "6.5.8",
     "@mikro-orm/mysql": "6.5.8",
     "@mikro-orm/sql-highlighter": "1.0.1",
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "reflect-metadata": "0.2.2"
   }
