--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "24.1.0",
     "tsc-watch": "6.0.4",
     "typescript": "5.1.3"
@@ -23,9 +26,12 @@
     "@mikro-orm/mysql": "6.5.8",
     "@mikro-orm/sql-highlighter": "1.0.1",
     "@types/cors": "^2.8.19",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "0.2.2"
   }
 }
